Overhauls entities and adds NoSQL database

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,11 +1,34 @@
-spring.datasource.url=jdbc:postgresql://localhost:3000/BrotherDB
+# Server port
+server.port=8000
+
+# PostgreSQL configuration
+spring.datasource.host=localhost
+spring.datasource.port=3000
+spring.datasource.database=BrotherDB
 spring.datasource.username=clarice
 spring.datasource.password=003
 spring.datasource.driver-class-name=org.postgresql.Driver
 
+spring.datasource.url=jdbc:postgresql://${spring.datasource.host}:${spring.datasource.port}/${spring.datasource.database}
+
+
+# JPA / Hibernate settings
 spring.jpa.hibernate.ddl-auto=create
 spring.jpa.show-sql=true
 spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.PostgreSQLDialect
 
-server.port=8000
+
+# MongoDB configuration
+spring.data.mongodb.host=localhost
+spring.data.mongodb.port=27017
+spring.data.mongodb.database=brotherband
+spring.data.mongodb.username=
+spring.data.mongodb.password=
+
+# Mongo options
+spring.data.mongodb.auto-index-creation=true
+spring.data.mongodb.repositories.enabled=true
+
+# Swagger UI path
+springdoc.swagger-ui.path=/swagger.html
 
