--- a/pom.xml
+++ b/pom.xml
@@ -90,6 +90,12 @@
 			<groupId>org.springframework.boot</groupId>
 			<artifactId>spring-boot-starter-data-mongodb</artifactId>
 		</dependency>
+		<!-- Swagger -->
+		<dependency>
+			<groupId>org.springdoc</groupId>
+			<artifactId>springdoc-openapi-starter-webmvc-ui</artifactId>
+		<version>2.3.0</version>
+		</dependency>
 		<!-- Configuration Processor -->
 		<dependency>
 			<groupId>org.springframework.boot</groupId>
