Updates pom and properties

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -31,4 +31,8 @@ spring.data.mongodb.repositories.enabled=true
 
 # Swagger UI path
 springdoc.swagger-ui.path=/swagger.html
+springdoc.api-docs.path=/v3/api-docs
+springdoc.api-docs.enabled=true
+springdoc.swagger-ui.enabled=true
+
 
